[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Resources/BattlePhase/Scenes/RewardsPanel.gd" id="1_script"]

[node name="RewardsPanel" type="PanelContainer"]
theme_type_variation = &"DarkPanel"
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CreditsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits Earned"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CreditsContainer"]
layout_mode = 2

[node name="BasePaymentLabel" type="Label" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Base Payment: 1000"

[node name="ObjectiveBonusLabel" type="Label" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Objective Bonus: +200"

[node name="BattlefieldBonusLabel" type="Label" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Battlefield Finds: +150"

[node name="TotalLabel" type="Label" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total: 1350"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LootContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LootContainer"]
layout_mode = 2

[node name="LootLabel" type="Label" parent="MarginContainer/VBoxContainer/LootContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Battlefield Loot"

[node name="RollLootButton" type="Button" parent="MarginContainer/VBoxContainer/LootContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Roll for Loot"

[node name="LootList" type="RichTextLabel" parent="MarginContainer/VBoxContainer/LootContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true
text = "• Military Rifle (Good)
• Medical Supplies
• Encrypted Data Chip"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Patron/Rival Status"

[node name="RollStatusButton" type="Button" parent="MarginContainer/VBoxContainer/StatusContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Roll Status"

[node name="StatusList" type="RichTextLabel" parent="MarginContainer/VBoxContainer/StatusContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true
text = "• Patron: Simon - Impressed (+1 Rep)
• Rival: Black Dragons - No Change"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LootContainer/HBoxContainer/RollLootButton" to="." method="_on_roll_loot_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatusContainer/HBoxContainer/RollStatusButton" to="." method="_on_roll_status_pressed"]
